# 01-windows-c-compiler-setup

./: CMakeLists.txt  Readme.md
source/: CMakeLists.txt
source/hello/: CMakeLists.txt  main.c
source/libhello/: CMakeLists.txt  hello.c  hello.h
